# image-classificaion-app

./: .coveragerc  .gitignore  README.md  pyproject.toml  setup.py
data/: category_list.txt
image_app/: app.py  cli.py  exception.py  preprocess_raw_data.py  types.py
image_app/ml/: __init__.py  base.py  data.py  infer.py  labels.py  models.py  preprocess.py  serializer.py  train.py
image_app/models/: image.py  mixins.py  ml.py
image_app/orm/: db.py
image_app/services/: commands.py  events.py  handlers.py  messagebus.py
image_app/settings/: __init__.py  _base.py  _development.py  _helper.py  _production.py  _test.py
image_app/web/: __init__.py  api.py  views.py
tests/: all_suites.py  integration_suite.py  unittest_suite.py  utils.py
tests/ml/: test_base.py  test_data.py  test_infer.py  test_labels.py  test_serializer.py
tests/models/: base.py  test_image.py  test_mixins.py
tests/services/: test_handlers.py
tests/web/: test_api.py
