[tool.poetry]
name = "image-app"
version = "0.1.0"
description = ""
authors = ["Rio M. <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
numpy = "^1.19.2"
SQLAlchemy = "^1.3.20"
Pillow = "^8.0.1"
gunicorn = "^20.0.4"
tflite-runtime = {url = "https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp38-cp38-linux_x86_64.whl"}
python-dotenv = "^0.14.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
